Add caretIcon and css animations

--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -7,8 +7,10 @@ $breakpoint-lg: 1200px;
 // Color Variables
 $color-background: #041f35;
 $color-background-light: #0e4066;
+$color-background-hover: #134c77;
 $color-primary: #fff7ca;
 $color-white: #ffffff;
+$color-accent: #6bffff;
 
 // Spacing Variables
 $spacing-xxs: 4px;
