--- a/components/AccordionItem/AccordionItem.module.scss
+++ b/components/AccordionItem/AccordionItem.module.scss
@@ -4,9 +4,18 @@
   border: 2px solid $color-background-light;
   border-radius: 4px;
   background-color: $color-background-light;
+  transition: all 0.3s ease;
+
+  &:hover {
+    background-color: $color-background-hover;
+    border-color: $color-background-hover;
+  }
 }
 
 .header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   border: none;
   padding: $spacing-sm $spacing-md;
   text-align: left;
@@ -26,6 +35,16 @@
   color: $color-primary;
 }
 
+.icon {
+  fill: $color-white;
+  transition: all 0.3s ease;
+}
+
+.header.active .icon {
+  fill: $color-primary;
+  transform: rotate(180deg);
+}
+
 .content {
   padding: $spacing-sm $spacing-md;
   font-size: $font-size-md;
@@ -35,4 +54,8 @@
   @media (min-width: $breakpoint-lg) {
     font-size: $font-size-lg;
   }
+}
+
+.header.active + .content {
+  display: block;
 }
