Set up error handling for contentful data fetching

--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -11,6 +11,7 @@ $color-background-hover: #134c77;
 $color-primary: #fff7ca;
 $color-white: #ffffff;
 $color-accent: #6bffff;
+$color-error: #d43535;
 
 // Spacing Variables
 $spacing-xxs: 4px;
