--- a/components/AccordionItem/AccordionItem.module.scss
+++ b/components/AccordionItem/AccordionItem.module.scss
@@ -1,4 +1,4 @@
-@import "../../styles/variables.scss";
+@import '../../styles/variables.scss';
 
 .item {
   border: 2px solid $color-background-light;
