Add paragraph to home page and update readme + comments

--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -21,3 +21,10 @@
     font-size: $font-size-heading-desktop;
   }
 }
+
+.description {
+  font-size: $font-size-lg;
+  text-align: center;
+  margin-top: 0;
+  margin-bottom: $spacing-xl;
+}
