--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -37,8 +37,10 @@ $font-size-md: 16px;
 $font-size-lg: 20px;
 $font-size-xl: 24px;
 
-$font-size-heading-mobile: 60px;
-$font-size-heading-desktop: 90px;
+$font-size-heading-xs: 50px;
+$font-size-heading-sm: 60px;
+$font-size-heading-md: 80px;
+$font-size-heading-lg: 90px;
 
 // Font weight variables
 $font-weight-normal: 400;
